--- a/Привет.md
+++ b/Привет.md
@@ -9,3 +9,12 @@
 ~~~
 Чёрный фон
 ~~~
+* список через точку
+* *для наглядности*
+* * можно и так
+* * * или так
+
+    * даже так можно)
+    
+1. Список через цифры
+2. наглядность
