--- a/Привет.md
+++ b/Привет.md
@@ -18,3 +18,12 @@
     
 1. Список через цифры
 2. наглядность
+
+А сейчас разделим текст горизонтальной линией
+***
+так.
+
+Или так
+
+---
+Подчеркнули
