--- a/Привет.md
+++ b/Привет.md
@@ -29,3 +29,11 @@
 Подчеркнули
 
 ![](/%D0%9F%D0%95%D0%A0%D0%95%D0%92%D0%9E%D0%A0%D0%9E%D0%A2%20jpg.jpg)
+
+## Теперь поговорим о том, как создать, слить ветки
+Что бы создать ветку необходимо в терминале набрать команду git branch и указать имя ветки;
+Что бы переключиться на ветку необходимо набрать команду git checkout branch_name;
+Можно командой git checkout -b branch_name создать и сразу переключиться на созданную ветку;
+Что бы слить дополнительную ветку с основной необходимо находиться в основной и набрать команду git merge branch_name;
+Что бы удолить ветку нужно набрать команду git branch -d branch_name;
+Иногда находясь в доплнительной ветке необхдимо её обновить, потому что в основной велись работы и там появилось нескольно комитов, для этого есть команда git rebase main, но необходимо находиться в доп. ветке или git rebase main branch_name.
